k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: ananasiika
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gateway.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway  
            port:
              number: 8080
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway  
            port:
              number: 8080
